POR/RefEdge/src/objects/Custom_Settings__c.object
<CustomObject>
    <description>This object holds the custom settings for the app</description>
    <fields>
        <fullName>ACV_Amount_Field__c</fullName>
        <description>Indicates the field on the Opportunity that contains the value which should be included in the ACV calculation.</description>
        <inlineHelpText>Indicates the field on the Opportunity that contains the value which should be included in the ACV calculation.</inlineHelpText>
        <label>ACV Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Basis__c</fullName>
        <inlineHelpText>Indicates whether ACV calculations should be based on a calendar year or fiscal year.</inlineHelpText>
        <label>ACV Basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year</fullName>
                    <default>true</default>
                    <label>Calendar Year</label>
                </value>
                <value>
                    <fullName>Fiscal Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Stages__c</fullName>
        <inlineHelpText>Stages that will trigger the &quot;Need References?&quot; prompt on the Opportunity page.</inlineHelpText>
        <label>Account Stages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Version__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This checkbox denotes that this version of the settings is the active one</description>
        <inlineHelpText>This checkbox denotes that this version of Custom Settings is currently active.</inlineHelpText>
        <label>Active Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adv_Request_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting enables us to determine which approach to take when routing any new requests.</description>
        <inlineHelpText>Enables Advanced Request Routing.</inlineHelpText>
        <label>Advanced Request Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adv_Routing_Default__c</fullName>
        <description>The default behaviour if Advanced Routing does not find a match.</description>
        <inlineHelpText>The default behaviour if Advanced Routing does not find a match.</inlineHelpText>
        <label>Advanced Routing Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send to CRP Team</fullName>
                    <default>true</default>
                    <label>Send to CRP Team</label>
                </value>
                <value>
                    <fullName>Send to Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adv_Routing_Group_Lbl__c</fullName>
        <description>This field allows each client to specify the label that will be displayed on our VF pages for this field.</description>
        <inlineHelpText>Specify the label that will be displayed next to the Advanced Routing Group choices on the Request page.</inlineHelpText>
        <label>Advanced Routing Group Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adv_Routing_Group_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a selection must be made from the Advanced Routing Group before a request can be submitted.</description>
        <inlineHelpText>Indicates that a selection must be made from the Advanced Routing Group before a request can be submitted.</inlineHelpText>
        <label>Advanced Routing Group Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adv_Rt_Acct_Team_Contact__c</fullName>
        <label>Contact Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adv_Rt_Acct_Team_Object__c</fullName>
        <description>Indicates which related object on the Account is to be used for Team Member identification.</description>
        <inlineHelpText>Indicates which related object on the Account is to be used for Team Member identification.</inlineHelpText>
        <label>Account Team Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adv_Rt_Acct_Team_Role_Picklist__c</fullName>
        <inlineHelpText>Indicates which picklist field on the Account Team Object contains the list of values identifying the roles of the Account Team members. Blank indicates that Roles should not be considered as part of the routing criteria.</inlineHelpText>
        <label>Role Picklist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adv_Rt_Acct_Team_Roles_to_Include__c</fullName>
        <inlineHelpText>Indicates which roles should be included in the routing decisions. Only team members with matching roles will be considered in the routing decisions.</inlineHelpText>
        <label>Roles to Include</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adv_Rt_Acct_Team_Routeby__c</fullName>
        <description>Indicates which picklist field on the Account Team Object contains the list of values for routing the request.</description>
        <inlineHelpText>Indicates which picklist field on the Account Team Object contains the list of values for routing the request.</inlineHelpText>
        <label>Routing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adv_Rt_Acct_Team_User__c</fullName>
        <description>Indicates which picklist field on the Account Team Object contains the Team Member that the request will be routed to.</description>
        <inlineHelpText>Indicates which picklist field on the Account Team Object contains the Team Member that the request will be routed to.</inlineHelpText>
        <label>User Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Routing_Settings__c</fullName>
        <description>View all Advanced Routing Settings, manage the Advanced Routing Table, and edit Advanced Routing Filters.</description>
        <formula>HYPERLINK(&apos;/apex/&apos; + $Setup.POR_App_Configuration__c.Namespace__c + &apos;AdvancedRoutingChecker&apos;, &apos;Manage&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>View all Advanced Routing Settings, manage the Advanced Routing Table, and edit Advanced Routing Filters.</inlineHelpText>
        <label>Advanced Routing Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Reviews_to_CRP_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Review notifications will ONLY be sent to the CRP Team even if the Manager field is populated on the User (Opportunity Owner) record.</inlineHelpText>
        <label>All Reviews to CRP Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Opportunity_Stage_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Opportunity Stage Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_Decline_Confirmation_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent by the Reference Owner to the Requester.</inlineHelpText>
        <label>Approve/Decline Confirmation Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_Decline_Confirmation_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent by the Reference Owner to the Requester.</inlineHelpText>
        <label>Approve/Decline Confirmation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_Decline_Confirmation_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent by the Reference Owner to the Requester.</description>
        <inlineHelpText>Enables the slack message sent by the Reference Owner to the Requester.</inlineHelpText>
        <label>Approve/Decline Confirmation Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attach_Supporting_Documents_To_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach Supporting Documents To Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Assign_Sales_Reward_on_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Issue User Points on Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Assign_Sales_Rewards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Issue User Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_create_delete_Reference_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When content is added to Salesforce CRM Content a Reference Content record will be automatically created. When content is deleted from Salesforce CRM Content the Reference Content record will be deleted.</inlineHelpText>
        <label>Auto Create/Delete Reference Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatically_Assign_Reward_on_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Issue Customer Points on Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatically_Assign_Rewards__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>At the completion of a reference project (e.g., reference call) the predefined reward points will be automatically issue to the Contact.</inlineHelpText>
        <label>Auto Issue Customer Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caution_deadline_window__c</fullName>
        <inlineHelpText>Used to define the time frame of the Caution category for Reference Workspace projects.</inlineHelpText>
        <label>Caution Deadline Window</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chatter_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Chatter enabled app-wide?</description>
        <inlineHelpText>Used to enable/disable Chatter notifications.</inlineHelpText>
        <label>Chatter Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_back_in_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the confirmation Chatter sent to the Opportunity owner when they select a timeframe for checking back in on referenceability of an Account / Contact.</description>
        <inlineHelpText>Enables the confirmation Chatter sent to the Opportunity owner when they select a timeframe for checking back in on referenceability of an Account / Contact.</inlineHelpText>
        <label>Check back in Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_back_in_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the confirmation email sent to the Opportunity owner when they select a timeframe for checking back in on referenceability of an Account / Contact.</description>
        <inlineHelpText>Enables the confirmation email sent to the Opportunity owner when they select a timeframe for checking back in on referenceability of an Account / Contact.</inlineHelpText>
        <label>Check back in Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_back_in_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the confirmation slack message sent to the Opportunity owner when they select a timeframe for checking back in on referenceability of an Account / Contact.</description>
        <inlineHelpText>Enables the confirmation slack message sent to the Opportunity owner when they select a timeframe for checking back in on referenceability of an Account / Contact.</inlineHelpText>
        <label>Check back in Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Referenceability_check_days__c</fullName>
        <label>Referenceability Check Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_Home_Text__c</fullName>
        <label>Community Home Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Ref_Activities_Message__c</fullName>
        <label>Community Ref Activities Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consider_No_longer_needed_a_use__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Consider “No longer needed” a use?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Stages__c</fullName>
        <inlineHelpText>Stages that will trigger the &quot;Need References?&quot; prompt on the Opportunity page.</inlineHelpText>
        <label>Content Stages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_import_API_reporting_email__c</fullName>
        <inlineHelpText>Report for failed records during Reference Content imports will be sent to this email address.</inlineHelpText>
        <label>Content import API reporting email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Create_Advocate_Reference_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When unchecked a new Hub Advocate will create a Nomination. When checked a new Hub Advocate will create a Reference Profile.</inlineHelpText>
        <label>Create Advocate Reference Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Nomination__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a Reference Lead results in a Reference being provided a new Nomination is created</description>
        <inlineHelpText>When a Reference Lead results in a Reference being provided a new Nomination is created</inlineHelpText>
        <label>Create Nomination?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Nominees__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, Nominee records will be created in the Hub for new Program Members who do not already exist in the Hub (based on their email address).</inlineHelpText>
        <label>Create Nominees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Reference_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a Reference Lead results in a Reference being provided a Reference Profile is created</description>
        <inlineHelpText>When a Reference Lead results in a Reference being provided a Reference Profile is created</inlineHelpText>
        <label>Create Reference Profile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Critical_Deadline_window__c</fullName>
        <inlineHelpText>Used to define the time frame of the Critical category for Reference Workspace projects.</inlineHelpText>
        <label>Critical Deadline Window</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Version__c</fullName>
        <description>The version of the software&apos;s settings that this object represents</description>
        <externalId>true</externalId>
        <inlineHelpText>The version of the software&apos;s settings that this object represents</inlineHelpText>
        <label>Current Version</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DC_CRP_Team_Review_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC CRP Team Review Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_CRP_Team_Review_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC CRP Team Review Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_CRP_Team_Review_Slack__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC CRP Team Review Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Escalation_to_Manager_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Escalation to Manager Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Escalation_to_Manager_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Escalation to Manager Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Escalation_to_Manager_Slack__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Escalation to Manager Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Escalation_to_Owner_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Escalation to Owner Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Escalation_to_Owner_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Escalation to Owner Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Escalation_to_Owner_Slack__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Escalation to Owner Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Initial_Notification_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Initial Notification Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Initial_Notification_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Initial Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Initial_Notification_Slack__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Initial Notification Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Manager_Review_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Manager Review Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Manager_Review_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Manager Review Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Manager_Review_Slack__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Manager Review Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Reminder_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Reminder Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Reminder_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Reminder Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Reminder_Slack__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DC Reminder Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Collector_Name__c</fullName>
        <inlineHelpText>The name of the form to be used by Data Collector.</inlineHelpText>
        <label>Data Collector Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Template_Fields__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;DataLoaderSettingPage?customSettingId=&apos; + Id , &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Select the fields that will be included in templates, exports, and imports.</inlineHelpText>
        <label>RefEdgeDM Template Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_of_Week__c</fullName>
        <description>off Days</description>
        <label>Off Days of Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Expiration_Days__c</fullName>
        <label>Default Expiration Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Library__c</fullName>
        <inlineHelpText>The library to which reference content will be associated if no Library is specified in the API data payload.</inlineHelpText>
        <label>Default Library</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Reference_Accounts_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New reference program member accounts will be Managed by default.</description>
        <inlineHelpText>New reference program member accounts will be Managed by default.</inlineHelpText>
        <label>Default Accounts to Managed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Reference_Content_Type__c</fullName>
        <inlineHelpText>The reference content type that will be associated to the reference content record if no match is found with the reference content type specified in the API data payload.</inlineHelpText>
        <label>Default Reference Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Referenceablity_Status__c</fullName>
        <inlineHelpText>This is the default status of a newly added Reference Program Member when triggered by the addition of a Referenceability or Attribute.</inlineHelpText>
        <label>Default Program Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Caution</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependent_Attribute_Filtering__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos; + $Setup.POR_App_Configuration__c.Namespace__c + &apos;FilterDependencySetting&apos;, &apos;Manage&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Attribute Filtering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is email enabled app-wide?</description>
        <inlineHelpText>Used to enable/disable email notifications. Not necessary if Chatter is enabled.</inlineHelpText>
        <label>Email Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Custom_Data_Loader__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls access over Custom Data Loader</description>
        <inlineHelpText>Enables import and export of ReferenceEdge data using RefEdgeDM</inlineHelpText>
        <label>Enable RefEdgeDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Data_Collector__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Activates the Data Collector functionality.</inlineHelpText>
        <label>Enable Data Collector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Ref_Search_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Export feature on Ref Search Page</description>
        <label>Enable Ref Search Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Reference_Prompt__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the &quot;Need References?&quot; prompt on the Opportunity page when the stage is changed to one of the designated stages.</inlineHelpText>
        <label>Enable Reference Prompt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Reference_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the Profile Update Minder functionality.</description>
        <inlineHelpText>Enables the Profile Update Minder functionality.</inlineHelpText>
        <label>Enable Profile Update Minder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Sales_Rewards_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User Points - as defined in Reward Settings - will be assigned to users on completion of actions.</description>
        <inlineHelpText>User Points- as defined in Reward Settings - will be assigned to users on completion of actions.</inlineHelpText>
        <label>Enable User Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Slack_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Slack Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled_Content_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the API for Reference Content.</inlineHelpText>
        <label>Enabled Content Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalate_On_Last_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Opportunity Owner and their manager will be notified. If no manager is configured on the User record the reminder will be sent to the Owner but no escalation will occur.</inlineHelpText>
        <label>Escalate On Last Reminder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_to_Owner_Manager__c</fullName>
        <description>The number of days before a Request deadline that an escalation notification will be sent to the Account/Reference Owner&apos;s manager.</description>
        <inlineHelpText>The number of days before a Request deadline that an escalation notification will be sent to the Account/Reference Owner&apos;s manager.</inlineHelpText>
        <label>Escalation to Owner’s Manager</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Days__c</fullName>
        <label>Customer Points Expiration Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Timeframe__c</fullName>
        <label>Customer Expiration Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>end of current CY</fullName>
                </value>
                <value>
                    <fullName>end of current FY</fullName>
                </value>
                <value>
                    <fullName>end of NEXT CY</fullName>
                </value>
                <value>
                    <fullName>end of NEXT FY</fullName>
                </value>
                <value>
                    <fullName>&apos;x&apos; days from award date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expire_Rewards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expire Customer Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expire_Sales_Rewards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expire User Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Object__c</fullName>
        <description>Select the ReferenceEdge objects for which exports are enabled</description>
        <label>Export Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Objects__c</fullName>
        <inlineHelpText>Select the ReferenceEdge objects for which exports are enabled</inlineHelpText>
        <label>Export Objects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attribute__c</fullName>
                </value>
                <value>
                    <fullName>Reference_Content__c</fullName>
                </value>
                <value>
                    <fullName>Reference_Content_Type__c</fullName>
                </value>
                <value>
                    <fullName>Library__c</fullName>
                </value>
                <value>
                    <fullName>Reference_Basic_Information__c</fullName>
                </value>
                <value>
                    <fullName>Account_with_Attributes__c</fullName>
                </value>
                <value>
                    <fullName>Contact_with_Attributes__c</fullName>
                </value>
                <value>
                    <fullName>Content_with_Attributes__c</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Message_Delay__c</fullName>
        <description>number of days after a reference use deadline for the automatic reference use feedback message to be sent (see R57)</description>
        <inlineHelpText>The number of days after the deadline for a reference activity (e.g., Reference Call)  when a message will be sent to the Requester asking for feedback concerning the activity.</inlineHelpText>
        <label>Request Feedback</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter_Order__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;FilterSettingPage?customSettingId=&apos;+ Id , &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <label>Filter Order and Basic Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filtered_Content_Ids__c</fullName>
        <label>Filtered Content Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filtered_Content_Tab__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;FilteredContentTab?customSettingId=&apos;+Id, &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <label>Filtered Content Tab</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_Of_Reminders__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>The number of days to wait between reminders.</inlineHelpText>
        <label>Reminder Interval</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <description>Note that displays on the Account Request form after the request type has been selected.</description>
        <inlineHelpText>Note that displays on the Account Request form after the request type has been selected.</inlineHelpText>
        <label>General Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Assistant__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;HelpAssistantSetting?customSettingId=&apos;+ Id , &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <label>Help Assistant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Overlay_Count__c</fullName>
        <label>Help Assistant Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_Object__c</fullName>
        <description>Select the ReferenceEdge objects for which imports are enabled</description>
        <label>Import Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>